Various SHiFT Code Panel Updates, Improvements, & Fixes

--- a/assets/styles/css/files/FontAwesome.css
+++ b/assets/styles/css/files/FontAwesome.css
@@ -93,3 +93,5 @@
   content: "\f519"; }
 .fa-chevron-circle-down:before {
   content: "\f13a"; }
+.fa-filter:before {
+  content: "\f0b0"; }
